# game-reviewer

./: README.md
backend/: Cargo.toml  configuration-example.yaml
backend-nest/: .env  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend-nest/prisma/: schema.prisma  seed.ts
backend-nest/prisma/migrations/20250120143620_add_review_table/: migration.sql
backend-nest/prisma/migrations/20250120144729_add_game_publisher_and_developer_tables/: migration.sql
backend-nest/prisma/migrations/20250120150708_add_platform_table_and_updated_user/: migration.sql
backend-nest/prisma/migrations/20250301214325_change_tables_names/: migration.sql
backend-nest/prisma/migrations/20250301221727_add_created_at/: migration.sql
backend-nest/scripts/: init_db.sh
backend-nest/src/app/entities/: developer.ts  game.ts  password.spec.ts  publisher.ts  user.spec.ts  user.ts
backend-nest/test/repository/: in-memory-user-repository.ts
backend/migrations/: 20241224224436_create_game_table.sql  20241226154550_create_developer.sql
backend/scripts/: init_db.sh
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs
backend/src/app/entities/: developer.rs  game.rs  mod.rs  password.rs  publisher.rs  user.rs
backend/src/routes/: mod.rs
backend/src/tests/: game_test.rs  health_check.rs  mod.rs  password_test.rs  user.rs
backend/tests/: health_check.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: header.tsx  home-banner.tsx  test.tsx
frontend/src/pages/: home.tsx
(+16 files in other folders)
